Fix gallery items spacing on all screen sizes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -125,12 +125,16 @@ article {
 }
 
 /*** GALLERY ***/
+
+$gallery-thumb-spacing: 30px;
 .gallery-container {
     margin-bottom: 30px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    padding-left: $gallery-thumb-spacing;
 }
 
 .gallery-thumb {
@@ -138,16 +142,13 @@ article {
     min-width: 200px;
     border-radius: 2px 2px 15px 15px;
     cursor: pointer;
-    margin-bottom: 10px;
     box-shadow: 3px 3px 30px 7px rgba(0,0,0,0.45);
     padding: 15px;
-    transition: box-shadow ease 0.5s;
     text-decoration: none;
     position: relative;
-
-    & + & {
-        margin-left: 30px;
-    }
+    margin-bottom: $gallery-thumb-spacing;
+    margin-right: $gallery-thumb-spacing;
+    transition: box-shadow ease 0.5s;
 
     &:hover {
         text-decoration: none;
